--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
         <script src="script.js"></script>
     </head>
     <body>
-        
+        <div class="calculator">
+            <div class="display"></div>
+            <div class="all-numbers">
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="number">0</button>
+            </div>
+            <div class="all-operators">
+                <button class="operator">+</button>
+                <button class="operator">-</button>
+                <button class="operator">*</button>
+                <button class="operator">/</button>
+                <button class="operator equals">=</button>
+            </div>
+            <button class="clear">C</button>
+        </div>
     </body>
 </html>
