Change currentOperator to prevOperator
This change better describes what this variable contains since it is
almost always read when looking at the operator that comes after it.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="operator">/</button>
                 <button class="operator equals">=</button>
             </div>
-            <button class="clear">C</button>
+            <button class="clear">Clear</button>
         </div>
     </body>
 </html>
