--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="operator">+</button>
                 <button class="operator">-</button>
                 <button class="operator">*</button>
-                <button class="operator">/</button>
+                <button class="operator">÷</button>
                 <button class="operator equals">=</button>
             </div>
             <button class="clear">Clear</button>
