Add ability to change the sign of the displayValue

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                 <button class="operator">÷</button>
                 <button class="operator equals">=</button>
             </div>
-            <button class="clear">Clear</button>
+            <div class="modify-display">
+                <button class="clear">Clear</button>
+                <button class="change-sign">+/-</button>
+            </div>
         </div>
     </body>
 </html>
