--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="modify-display">
                 <button class="clear">Clear</button>
                 <button class="change-sign">+/-</button>
+                <button class="decimal">.</button>
             </div>
         </div>
     </body>
