Add support for undoing last digit in display

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </div>
             <div class="modify-display">
                 <button class="clear">Clear</button>
+                <button class="backspace">Backspace</button>
                 <button class="change-sign">+/-</button>
                 <button class="decimal">.</button>
             </div>
