--- a/index.html
+++ b/index.html
@@ -9,30 +9,34 @@
     <body>
         <div class="calculator">
             <div class="display"></div>
-            <div class="all-numbers">
-                <button class="number">1</button>
-                <button class="number">2</button>
-                <button class="number">3</button>
-                <button class="number">4</button>
-                <button class="number">5</button>
-                <button class="number">6</button>
-                <button class="number">7</button>
-                <button class="number">8</button>
-                <button class="number">9</button>
-                <button class="number">0</button>
-            </div>
-            <div class="all-operators">
-                <button class="operator">+</button>
-                <button class="operator">-</button>
-                <button class="operator">*</button>
-                <button class="operator">÷</button>
-                <button class="operator equals">=</button>
-            </div>
-            <div class="modify-display">
-                <button class="clear">Clear</button>
-                <button class="backspace">Backspace</button>
-                <button class="change-sign">+/-</button>
-                <button class="decimal">.</button>
+            <div class="keypad">
+                <div class="number-controls">
+                    <div class="top">
+                        <button class="clear">Clear</button>
+                        <button class="undo">Undo</button>
+                    </div>
+                    <div class="all-numbers">
+                        <button class="number">7</button>
+                        <button class="number">8</button>
+                        <button class="number">9</button>
+                        <button class="number">4</button>
+                        <button class="number">5</button>
+                        <button class="number">6</button>
+                        <button class="number">1</button>
+                        <button class="number">2</button>
+                        <button class="number">3</button>
+                        <button class="number">0</button>
+                        <button class="number decimal">.</button>
+                        <button class="number change-sign">+/-</button>
+                    </div>
+                </div>
+                <div class="all-operators">
+                    <button class="operator">÷</button>
+                    <button class="operator">*</button>
+                    <button class="operator">-</button>
+                    <button class="operator">+</button>
+                    <button class="operator equals">=</button>
+                </div>
             </div>
         </div>
     </body>
