--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <button class="number">2</button>
                         <button class="number">3</button>
                         <button class="number">0</button>
-                        <button class="number decimal">.</button>
-                        <button class="number change-sign">+/-</button>
+                        <button class="decimal">.</button>
+                        <button class="change-sign">+/-</button>
                     </div>
                 </div>
                 <div class="all-operators">
