--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
             <div class="keypad">
                 <div class="number-controls">
                     <div class="top">
-                        <button class="clear">Clear</button>
-                        <button class="undo">Undo</button>
+                        <button data-key="67" class="clear">Clear</button>
+                        <button data-key="8" class="undo">Undo</button>
                     </div>
                     <div class="all-numbers">
-                        <button class="number">7</button>
-                        <button class="number">8</button>
-                        <button class="number">9</button>
-                        <button class="number">4</button>
-                        <button class="number">5</button>
-                        <button class="number">6</button>
-                        <button class="number">1</button>
-                        <button class="number">2</button>
-                        <button class="number">3</button>
-                        <button class="number">0</button>
-                        <button class="decimal">.</button>
-                        <button class="change-sign">+/-</button>
+                        <button data-key="55" class="number">7</button>
+                        <button data-key="56" class="number">8</button>
+                        <button data-key="57" class="number">9</button>
+                        <button data-key="52" class="number">4</button>
+                        <button data-key="53" class="number">5</button>
+                        <button data-key="54" class="number">6</button>
+                        <button data-key="49" class="number">1</button>
+                        <button data-key="50" class="number">2</button>
+                        <button data-key="51" class="number">3</button>
+                        <button data-key="48" class="number">0</button>
+                        <button data-key="190" class="decimal">.</button>
+                        <button data-key="189" class="change-sign">+/-</button>
                     </div>
                 </div>
                 <div class="all-operators">
-                    <button class="operator">÷</button>
-                    <button class="operator">*</button>
-                    <button class="operator">-</button>
-                    <button class="operator">+</button>
-                    <button class="operator equals">=</button>
+                    <button data-key="191" class="operator">÷</button>
+                    <button data-key="56" class="operator">*</button>
+                    <button data-key="56" class="operator">-</button>
+                    <button data-key="56" class="operator">+</button>
+                    <button data-key="56" class="operator equals">=</button>
                 </div>
             </div>
         </div>
